# convnets

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
convnets/: __init__.py  hello.py  metrics.py  utils.py
convnets/datasets/: ImageClassificationDataset.py  SSLDataset.py  __init__.py  eurosat.py  imagenet.py  mnist.py  seco.py  utils.py
convnets/models/: __init__.py  alexnet.py  barlow.py  lenet5.py  msfe.py  resnet.py  vgg.py
convnets/models/lenet/: __init__.py  config.py  model.py
convnets/models/resnet/: __init__.py  config.py  model.py
convnets/models/vgg/: __init__.py  config.py  model.py
convnets/train/: __init__.py  barlow.py  fit.py  fit_old.py  utils.py
convnets/train/imagenet/: metrics.py
examples/: 00_hello.ipynb
learn/: 00_what_are_convolutions.ipynb  01_what_are_convnets.ipynb  02_training_convnets.ipynb  03_transfer_learning.ipynb  04_self_supervised_learning.ipynb  06_imagenet.ipynb  README.md  barlow.py  convnets  hists.json  hparms_opt.py
learn/checkpoints/: model_0.44994_50.pth  model_0.45004_50.pth
lightning_logs/version_0/: hparams.yaml
lightning_logs/version_1/: hparams.yaml
lightning_logs/version_2/: hparams.yaml
models/: 1998_lenet.ipynb  1998_lenet5.ipynb  2012_alexnet.ipynb  2014_vgg.ipynb  2015_resnet.ipynb  README.md
scripts/: evaluate.py  imagenet.py  train.py
scripts/configs/: alexnet.yaml  lenet.yaml  resnet.yaml  vgg.yaml
scripts/experiments/alexnet/: exp001.yaml  exp004.yaml
scripts/imagenet/: debug.yaml  pl.py  train.py
tests/: test_with_pytest.py
(+13 files in other folders)
